jump to github page when logo clicked

--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <img class="logo" src="logo.png">
+    <a href="https://github.com/tand826/wsiprocess"><img class="logo" src="logo.png"></a>
     <div id="root"></div>
     <!--
       This HTML file is a template.
